<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/white"
    tools:context="com.boutline.sports.activity.GroupSettingsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/groupSettingsActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@+id/leftMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:id="@+id/groupSettingsToolbarTextView"
            android:text="@string/manunitedfansclub"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:id="@+id/hrline"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"
        android:layout_below="@id/groupSettingsActivityToolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hrline">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:id="@+id/groupTagsLabelTextView"
        android:text="@string/group_tags_label"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/tagContainer"
        android:layout_below="@id/groupTagsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.boutline.sports.models.TagView
            android:id="@+id/tagview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:lineMargin="5dp"
            app:tagMargin="3dp"
            app:textPaddingBottom="8dp"
            app:textPaddingLeft="15dp"
            app:textPaddingRight="15dp"
            app:textPaddingTop="8dp">
        </com.boutline.sports.models.TagView>
    </LinearLayout>
            <View
                android:id="@+id/hrline2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/tagContainer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/editGroupTagsTextView"
        android:layout_below="@id/hrline2"
        android:text="@string/edit_group_tags"/>
            <View
                android:id="@+id/hrline3"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/editGroupTagsTextView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/membersTextView"
        android:layout_below="@id/hrline3"
        android:text="@string/members"/>
            <View
                android:id="@+id/hrline4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/membersTextView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/inviteOthersTextView"
        android:layout_below="@id/hrline4"
        android:text="@string/invite_others"/>
            <View
                android:id="@+id/hrline5"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/inviteOthersTextView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/notificationSettingsTextView"
        android:layout_below="@id/hrline5"
        android:text="@string/push_notification_settings"/>
            <View
                android:id="@+id/hrline6"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/notificationSettingsTextView"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/creatorLabelTextView"
        android:layout_below="@id/hrline6"
        android:text="@string/creatorLabel"/>
            <View
                android:id="@+id/hrline7"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/creatorLabelTextView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="15dp"
                android:id="@+id/renameGroupTextView"
                android:layout_below="@id/hrline7"
                android:text="@string/rename_group"/>
            <View
                android:id="@+id/hrline8"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_below="@id/renameGroupTextView"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#CC0000"
        android:textSize="14sp"
        android:padding="15dp"
        android:id="@+id/leaveGroupTextView"
        android:layout_below="@id/hrline8"
        android:text="@string/leave_group"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>