<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#F9F9F9"
    tools:context="com.boutline.sports.activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
    android:id="@+id/registerToolbar"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Sign up for Boutline"
            android:gravity="center"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/registerToolbarTextView" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="@color/white"
        android:layout_below="@+id/registerToolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/takes30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:text="Takes less than 30 seconds"
                android:textColor="@color/black" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/fullNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Name"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/fullNameEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/emailLabel"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:textColorHint="#CDCDCD"
                    android:hint="@string/fullname_edittext_hint"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/userNameEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/emailLabel"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:textColorHint="#CDCDCD"
                    android:hint="@string/username_edittext_hint"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/emailLabel"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:textColorHint="#CDCDCD"
                    android:hint="@string/email_username_hint"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:layout_marginLeft="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:ems="10"
                    android:textSize="14sp"
                    android:textColorHint="#CDCDCD"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/dummypassword"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:id="@+id/linearLayoutRegisterActivity">
                <CheckBox
                    android:id="@+id/showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/show_password_checkbox"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account_button"
                    android:textAllCaps="false"
                    android:background="@color/purple"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
                <TextView
                    android:id="@+id/signInTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="15dp"
                    android:text="@string/sigin_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:layout_below="@+id/createAccountButton"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
