<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#F9F9F9"
    tools:context="com.boutline.sports.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Sign in to Boutline"
            android:gravity="center"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/loginToolbarTextView" />
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/loginToolbar">
        <LinearLayout
            android:id="@+id/linearLayoutLoginActivity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/emailUsernameEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/emailLabel"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/email_username_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#CDCDCD"
                    android:textCursorDrawable="@null"/>
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginLeft="15dp"
        android:textSize="14sp"
        android:textColor="@color/black" />
                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/Theme.Form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:ems="10"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/dummypassword"
                    android:textColorHint="#CDCDCD"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"/>
        </LinearLayout>
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="15dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/signin_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/create_account_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:layout_below="@+id/signInButton"
            />

    </RelativeLayout>
</RelativeLayout>
