<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.boutline.sports.activity.ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forgotPasswordToolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Reset your password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/forgotPasswordToolbarTextView" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/helperEmailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textSize="14sp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        />
                    <EditText
                        android:id="@+id/helperEmailEditText"
                        style="@style/Theme.Form"
                        android:layout_width="match_parent"
                        android:layout_toRightOf="@id/helperEmailLabel"
                        android:textColorHint="#CDCDCD"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:textSize="14sp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/email_username_hint"
                        android:inputType="textEmailAddress"
                        android:textCursorDrawable="@null"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/rememberPasswordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/remember_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:text="@string/reset_password_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

</RelativeLayout>
